--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "local_search_engine"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+path = "src/main.rs"
+name = "explore"
+
 [dependencies]
 serde_json = "1.0.140"
 xml-rs = "0.8.25"
