--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+sqlite = "0.36.2"
 tiny_http = "0.12.0"
 xml-rs = "0.8.25"
