--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sqlite = "0.36.2"
+sqlite3-sys = "0.17.0"
 tiny_http = "0.12.0"
 xml-rs = "0.8.25"
